# collective.volto.aemet

./: .gitignore  .mrbob.ini  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  instance.yaml  pyproject.toml
docs/: LICENSE.md  Makefile  README.md  pyproject.toml
docs/source/: conf.py  glossary.md  index.md
docs/source/concepts/: index.md
docs/source/how-to-guides/: index.md  security.md
docs/source/reference/: development.md  index.md
docs/source/tutorials/: index.md
news/: 1.doc
scripts/: create_site.py
src/collective/volto/aemet/: __init__.py  configure.zcml  dependencies.zcml  interfaces.py  permissions.zcml  profiles.zcml  testing.py
src/collective/volto/aemet/controlpanels/: aemet_settings.py  configure.zcml
src/collective/volto/aemet/locales/: collective.volto.aemet.pot
src/collective/volto/aemet/locales/en/LC_MESSAGES/: collective.volto.aemet.po
src/collective/volto/aemet/locales/es/LC_MESSAGES/: collective.volto.aemet.po
src/collective/volto/aemet/profiles/default/: browserlayer.xml  catalog.xml  controlpanel.xml  rolemap.xml
src/collective/volto/aemet/profiles/default/registry/: icons_aemet.xml  main.xml
src/collective/volto/aemet/profiles/uninstall/: browserlayer.xml  controlpanel.xml
src/collective/volto/aemet/restapi/: configure.zcml
src/collective/volto/aemet/restapi/services/: configure.zcml
src/collective/volto/aemet/restapi/services/aemet/: configure.zcml  weather_forecast.py
src/collective/volto/aemet/restapi/services/controlpanels/: aemet_settings.py  configure.zcml  serializer.py
src/collective/volto/aemet/serializers/: configure.zcml  summary.py
src/collective/volto/aemet/setuphandlers/: __init__.py
src/collective/volto/aemet/static/: iconmap.json
src/collective/volto/aemet/upgrades/: configure.zcml
tests/: conftest.py
tests/controlpanel/: __init__.py  test_controlpanel.py  test_controlpanel_api.py
tests/restapi/: test_weather_forecast.py
tests/serializers/: __init__.py  test_summary.py
tests/setup/: __init__.py  test_setup_install.py  test_setup_uninstall.py
tests/setuphandlers/: __init__.py  test_setuphandlers.py
