[project]
name = "collective.volto.aemet"
dynamic = ["version"]
description = "An integration for the AEMET service with Plone"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Leonardo J. Caballero G.", email = "leonardocaballero@gmail.com" },
]
maintainers = [
    { name = "Leonardo J. Caballero G.", email = "leonardocaballero@gmail.com" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
    "AEMET",
    "integration",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.0",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: Addon",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "Products.CMFPlone",
    "plone.api",
    "plone.restapi",
    "plone.volto",
]

[project.optional-dependencies]
test = [
    "horse-with-no-namespace",
    "plone.app.testing",
    "plone.restapi[test]",
    "pytest",
    "pytest-cov",
    "pytest-plone>=0.5.0",
]
release = [
    "zest.releaser[recommended]",
    "zestreleaser.towncrier",
    "zest.pocompile",
]

[project.urls]
Homepage = "https://github.com/collective/collective.volto.aemet"
PyPI = "https://pypi.org/project/collective.volto.aemet"
Source = "https://github.com/collective/collective.volto.aemet"
Tracker = "https://github.com/collective/collective.volto.aemet/issues"
Documentation = "https://collectivevoltoaemet.readthedocs.io/"
Changelog = "https://github.com/collective/collective.volto.aemet/blob/main/CHANGELOG.md"
"Contributors" = "https://github.com/collective/collective.volto.aemet/blob/main/CONTRIBUTORS.md"

[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/collective/volto/aemet/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/scripts",
  "/news",
  "/.mxdev_cache",
  "/tox.ini",
  "/Makefile",
  "/bobtemplate.cfg",
  "/mx.ini",
  "/instance.yaml",
  "/.editorconfig",
  "/.flake8",
  "/.gitignore",
  "/.mrbob.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collective"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/collective/collective.volto.aemet/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["collective.volto.aemet", "tests"]
branch = true
parallel = true
omit = [
  "src/collective/volto/aemet/locales/*.py",
]

[tool.zest-releaser]
python-file-with-version = "src/collective/volto/aemet/__init__.py"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
